# axis-system-cms

./: .coverage  .gitignore  LICENSE  Makefile  README.md  axis-plugins.yaml  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
docs/: index.md
docs-internal/architecture/: index.md
docs-internal/bootstrap-context/: 01-solution-overview.md  02-codebase-map.md  03-execution-and-artifacts.md  04-current-workspace-system-aw.md  05-agent-session-starter.md  README.md
docs-internal/ideas/: cli_output_review.md  documentation-vault-operations-plan.md  ideas.md
docs-internal/specs/: WP-0.2.md  WP-1.2.md  WP-3.4.md  WP-V.1.1.md  WP-V.1.2.md  WP-V.3.1.md
docs-internal/testing/: axis-framework-playbook.md
docs/architecture/: 00-index.md  02-system-overview.md  07-resume-and-fault-tolerance.md  08-cli-architecture.md  09-visualization-architecture.md
docs/cheat-sheets/: behavior-metrics.md  index.md  prediction-system.md  system-a.md  system-aw.md  system-c.md  system-cw.md
docs/concepts/: 00-axis-vision.md  01-axis-cms-vision.md  02-math-as-modeling.md  03-agent-framework.md  04-system-a.md  05-system-aw.md  index.md
research/: README.md  context.md  jupyter-structure.md
scripts/: benchmark_execution_modes.py
src/: healthcheck.py
tests/: conftest.py  constants.py  test_config.py  test_drives.py  test_enums.py  test_infrastructure.py  test_memory.py  test_observation.py  test_policy.py  test_results.py  test_runner.py  test_scaffold.py  test_snapshots.py  test_transition.py  test_types.py  test_world.py
(+1276 files in other folders)
