[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axis"
version = "0.2.0-dev"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3.0",
    "pydantic>=2.0,<3.0",
    "PySide6>=6.6,<7",
    "pyyaml>=6.0,<7.0",
    "typing-extensions>=4.8,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.0,<5.0",
]

[project.entry-points."axis.plugins"]
system_a = "axis.systems.system_a"
system_b = "axis.systems.system_b"
system_aw = "axis.systems.system_aw"
grid_2d = "axis.world.grid_2d"
toroidal = "axis.world.toroidal"
signal_landscape = "axis.world.signal_landscape"

[project.scripts]
axis = "axis.framework.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]